v19.0/interfaces/GC.Spread.Sheets.IWorkbookOptions.md
# Interface: IWorkbookOptions

[Spread](../modules/GC.Spread.md).[Sheets](../modules/GC.Spread.Sheets.md).IWorkbookOptions

## Table of contents

### Properties

- [allSheetsListVisible](GC.Spread.Sheets.IWorkbookOptions.md#allsheetslistvisible)
- [allowAutoCreateHyperlink](GC.Spread.Sheets.IWorkbookOptions.md#allowautocreatehyperlink)
- [allowAutoExtendFilterRange](GC.Spread.Sheets.IWorkbookOptions.md#allowautoextendfilterrange)
- [allowContextMenu](GC.Spread.Sheets.IWorkbookOptions.md#allowcontextmenu)
- [allowCopyPasteExcelStyle](GC.Spread.Sheets.IWorkbookOptions.md#allowcopypasteexcelstyle)
- [allowDragHeaderToMove](GC.Spread.Sheets.IWorkbookOptions.md#allowdragheadertomove)
- [allowDynamicArray](GC.Spread.Sheets.IWorkbookOptions.md#allowdynamicarray)
- [allowExtendPasteRange](GC.Spread.Sheets.IWorkbookOptions.md#allowextendpasterange)
- [allowInvalidFormula](GC.Spread.Sheets.IWorkbookOptions.md#allowinvalidformula)
- [allowSheetReorder](GC.Spread.Sheets.IWorkbookOptions.md#allowsheetreorder)
- [allowUndo](GC.Spread.Sheets.IWorkbookOptions.md#allowundo)
- [allowUserDeselect](GC.Spread.Sheets.IWorkbookOptions.md#allowuserdeselect)
- [allowUserDragDrop](GC.Spread.Sheets.IWorkbookOptions.md#allowuserdragdrop)
- [allowUserDragFill](GC.Spread.Sheets.IWorkbookOptions.md#allowuserdragfill)
- [allowUserDragMerge](GC.Spread.Sheets.IWorkbookOptions.md#allowuserdragmerge)
- [allowUserEditFormula](GC.Spread.Sheets.IWorkbookOptions.md#allowusereditformula)
- [allowUserResize](GC.Spread.Sheets.IWorkbookOptions.md#allowuserresize)
- [allowUserZoom](GC.Spread.Sheets.IWorkbookOptions.md#allowuserzoom)
- [autoFitType](GC.Spread.Sheets.IWorkbookOptions.md#autofittype)
- [backColor](GC.Spread.Sheets.IWorkbookOptions.md#backcolor)
- [backgroundImage](GC.Spread.Sheets.IWorkbookOptions.md#backgroundimage)
- [backgroundImageLayout](GC.Spread.Sheets.IWorkbookOptions.md#backgroundimagelayout)
- [builtInFileIcons](GC.Spread.Sheets.IWorkbookOptions.md#builtinfileicons)
- [calcOnDemand](GC.Spread.Sheets.IWorkbookOptions.md#calcondemand)
- [calculationMode](GC.Spread.Sheets.IWorkbookOptions.md#calculationmode)
- [columnResizeMode](GC.Spread.Sheets.IWorkbookOptions.md#columnresizemode)
- [copyPasteHeaderOptions](GC.Spread.Sheets.IWorkbookOptions.md#copypasteheaderoptions)
- [customList](GC.Spread.Sheets.IWorkbookOptions.md#customlist)
- [cutCopyIndicatorBorderColor](GC.Spread.Sheets.IWorkbookOptions.md#cutcopyindicatorbordercolor)
- [cutCopyIndicatorVisible](GC.Spread.Sheets.IWorkbookOptions.md#cutcopyindicatorvisible)
- [defaultDragFillType](GC.Spread.Sheets.IWorkbookOptions.md#defaultdragfilltype)
- [defaultSheetTabStyles](GC.Spread.Sheets.IWorkbookOptions.md#defaultsheettabstyles)
- [dynamicReferences](GC.Spread.Sheets.IWorkbookOptions.md#dynamicreferences)
- [enableAccessibility](GC.Spread.Sheets.IWorkbookOptions.md#enableaccessibility)
- [enableFormulaTextbox](GC.Spread.Sheets.IWorkbookOptions.md#enableformulatextbox)
- [formulaFormatHint](GC.Spread.Sheets.IWorkbookOptions.md#formulaformathint)
- [grayAreaBackColor](GC.Spread.Sheets.IWorkbookOptions.md#grayareabackcolor)
- [hideSelection](GC.Spread.Sheets.IWorkbookOptions.md#hideselection)
- [highlightInvalidData](GC.Spread.Sheets.IWorkbookOptions.md#highlightinvaliddata)
- [incrementalCalculation](GC.Spread.Sheets.IWorkbookOptions.md#incrementalcalculation)
- [iterativeCalculation](GC.Spread.Sheets.IWorkbookOptions.md#iterativecalculation)
- [iterativeCalculationMaximumChange](GC.Spread.Sheets.IWorkbookOptions.md#iterativecalculationmaximumchange)
- [iterativeCalculationMaximumIterations](GC.Spread.Sheets.IWorkbookOptions.md#iterativecalculationmaximumiterations)
- [newTabVisible](GC.Spread.Sheets.IWorkbookOptions.md#newtabvisible)
- [pasteSkipInvisibleRange](GC.Spread.Sheets.IWorkbookOptions.md#pasteskipinvisiblerange)
- [pivotAreaReference](GC.Spread.Sheets.IWorkbookOptions.md#pivotareareference)
- [referenceStyle](GC.Spread.Sheets.IWorkbookOptions.md#referencestyle)
- [resizeZeroIndicator](GC.Spread.Sheets.IWorkbookOptions.md#resizezeroindicator)
- [rowResizeMode](GC.Spread.Sheets.IWorkbookOptions.md#rowresizemode)
- [scrollByPixel](GC.Spread.Sheets.IWorkbookOptions.md#scrollbypixel)
- [scrollIgnoreHidden](GC.Spread.Sheets.IWorkbookOptions.md#scrollignorehidden)
- [scrollPixel](GC.Spread.Sheets.IWorkbookOptions.md#scrollpixel)
- [scrollbarAppearance](GC.Spread.Sheets.IWorkbookOptions.md#scrollbarappearance)
- [scrollbarMaxAlign](GC.Spread.Sheets.IWorkbookOptions.md#scrollbarmaxalign)
- [scrollbarShowMax](GC.Spread.Sheets.IWorkbookOptions.md#scrollbarshowmax)
- [showDragDropTip](GC.Spread.Sheets.IWorkbookOptions.md#showdragdroptip)
- [showDragFillSmartTag](GC.Spread.Sheets.IWorkbookOptions.md#showdragfillsmarttag)
- [showDragFillTip](GC.Spread.Sheets.IWorkbookOptions.md#showdragfilltip)
- [showHorizontalScrollbar](GC.Spread.Sheets.IWorkbookOptions.md#showhorizontalscrollbar)
- [showResizeTip](GC.Spread.Sheets.IWorkbookOptions.md#showresizetip)
- [showScrollTip](GC.Spread.Sheets.IWorkbookOptions.md#showscrolltip)
- [showVerticalScrollbar](GC.Spread.Sheets.IWorkbookOptions.md#showverticalscrollbar)
- [tabEditable](GC.Spread.Sheets.IWorkbookOptions.md#tabeditable)
- [tabNavigationVisible](GC.Spread.Sheets.IWorkbookOptions.md#tabnavigationvisible)
- [tabStripPosition](GC.Spread.Sheets.IWorkbookOptions.md#tabstripposition)
- [tabStripRatio](GC.Spread.Sheets.IWorkbookOptions.md#tabstripratio)
- [tabStripVisible](GC.Spread.Sheets.IWorkbookOptions.md#tabstripvisible)
- [tabStripWidth](GC.Spread.Sheets.IWorkbookOptions.md#tabstripwidth)
- [useTouchLayout](GC.Spread.Sheets.IWorkbookOptions.md#usetouchlayout)

## Properties

### <a id="allsheetslistvisible" name="allsheetslistvisible"></a> allSheetsListVisible

• **allSheetsListVisible**: [`AllSheetsListVisibility`](../enums/GC.Spread.Sheets.AllSheetsListVisibility.md)

是否显示特殊标签以允许用户打开对话框以显示所有工作表。默认值为 GC.Spread.Sheets.AllSheetsListVisibility.auto.

___

### <a id="allowautocreatehyperlink" name="allowautocreatehyperlink"></a> allowAutoCreateHyperlink

• **allowAutoCreateHyperlink**: `boolean`

是否启用工作表中的自动创建超链接。默认值为 true.

___

### <a id="allowautoextendfilterrange" name="allowautoextendfilterrange"></a> allowAutoExtendFilterRange

• **allowAutoExtendFilterRange**: `boolean`

是否允许像Excel那样自动扩展筛选范围。 默认值为 false.

___

### <a id="allowcontextmenu" name="allowcontextmenu"></a> allowContextMenu

• **allowContextMenu**: `boolean`

是否允许用户打开内置上下文菜单。默认值为 true.

___

### <a id="allowcopypasteexcelstyle" name="allowcopypasteexcelstyle"></a> allowCopyPasteExcelStyle

• **allowCopyPasteExcelStyle**: `boolean`

是否允许用户从 Spread Sheets 复制样式到 Excel，或从 Excel 复制样式到 Spread Sheets。默认值为 true.

___

### <a id="allowdragheadertomove" name="allowdragheadertomove"></a> allowDragHeaderToMove

• **allowDragHeaderToMove**: [`AllowDragHeaderToMove`](../enums/GC.Spread.Sheets.AllowDragHeaderToMove.md)

指定如何允许拖动表头移动。默认值为 GC.Spread.Sheets.AllowDragHeaderToMove.none.

___

### <a id="allowdynamicarray" name="allowdynamicarray"></a> allowDynamicArray

• **allowDynamicArray**: `boolean`

是否启用动态数组。默认值为 false.

___

### <a id="allowextendpasterange" name="allowextendpasterange"></a> allowExtendPasteRange

• **allowExtendPasteRange**: `boolean`

如果粘贴范围不足以粘贴，是否扩展粘贴范围。默认值为 false.

___

### <a id="allowinvalidformula" name="allowinvalidformula"></a> allowInvalidFormula

• **allowInvalidFormula**: `boolean`

是否允许输入无效的公式字符串。默认值为 false.

___

### <a id="allowsheetreorder" name="allowsheetreorder"></a> allowSheetReorder

• **allowSheetReorder**: `boolean`

是否允许用户重新排列工作表。默认值为 true.

___

### <a id="allowundo" name="allowundo"></a> allowUndo

• **allowUndo**: `boolean`

是否允许用户撤销编辑。默认值为 true.

___

### <a id="allowuserdeselect" name="allowuserdeselect"></a> allowUserDeselect

• **allowUserDeselect**: `boolean`

是否允许用户在选择中使用 deselect。默认值为 true.

___

### <a id="allowuserdragdrop" name="allowuserdragdrop"></a> allowUserDragDrop

• **allowUserDragDrop**: `boolean`

是否允许用户拖放范围数据。默认值为 true.

___

### <a id="allowuserdragfill" name="allowuserdragfill"></a> allowUserDragFill

• **allowUserDragFill**: `boolean`

是否允许用户拖动填充范围。默认值为 true.

___

### <a id="allowuserdragmerge" name="allowuserdragmerge"></a> allowUserDragMerge

• **allowUserDragMerge**: `boolean`

是否允许用户拖动合并单元格。默认值为 false.

___

### <a id="allowusereditformula" name="allowusereditformula"></a> allowUserEditFormula

• **allowUserEditFormula**: `boolean`

是否允许用户编辑工作表中的单元格公式。默认值为 true.

___

### <a id="allowuserresize" name="allowuserresize"></a> allowUserResize

• **allowUserResize**: `boolean`

是否允许用户调整列和行的大小。默认值为 true.

___

### <a id="allowuserzoom" name="allowuserzoom"></a> allowUserZoom

• **allowUserZoom**: `boolean`

是否允许用户通过按住 Ctrl 键滚动鼠标滚轮来缩放显示。默认值为 true.

___

### <a id="autofittype" name="autofittype"></a> autoFitType

• **autoFitType**: [`AutoFitType`](../enums/GC.Spread.Sheets.AutoFitType.md)

内容是否适合单元格或单元格和标题。默认值为 GC.Spread.Sheets.AutoFitType.cell.

___

### <a id="backcolor" name="backcolor"></a> backColor

• **backColor**: `string`

用于表示 Spread 组件的背景颜色的颜色字符串，例如 "red"、"#FFFF00"、"rgb(255,0,0)"、"Accent 5" 等。默认值为 "white".

___

### <a id="backgroundimage" name="backgroundimage"></a> backgroundImage

• **backgroundImage**: `string`

Spread 组件的背景图像。默认值为 null.

___

### <a id="backgroundimagelayout" name="backgroundimagelayout"></a> backgroundImageLayout

• **backgroundImageLayout**: [`ImageLayout`](../enums/GC.Spread.Sheets.ImageLayout.md)

Spread 组件的背景图像布局。默认值为 GC.Spread.Sheets.ImageLayout.stretch.

___

### <a id="builtinfileicons" name="builtinfileicons"></a> builtInFileIcons

• **builtInFileIcons**: [`IBuiltInFileIcons`](GC.Spread.Sheets.IBuiltInFileIcons.md)

所有内置文件图标。

___

### <a id="calcondemand" name="calcondemand"></a> calcOnDemand

• **calcOnDemand**: `boolean`

是否仅在需要时计算公式。默认值为 false.

___

### <a id="calculationmode" name="calculationmode"></a> calculationMode

• **calculationMode**: [`CalculationMode`](../enums/GC.Spread.Sheets.CalculationMode.md)

工作簿的重新计算行为。默认值为 GC.Spread.Sheets.CalculationMode.auto.

___

### <a id="columnresizemode" name="columnresizemode"></a> columnResizeMode

• **columnResizeMode**: [`ResizeMode`](../enums/GC.Spread.Sheets.ResizeMode.md)

指定如何调整列的大小。默认值为 GC.Spread.Sheets.ResizeMode.normal.

___

### <a id="copypasteheaderoptions" name="copypasteheaderoptions"></a> copyPasteHeaderOptions

• **copyPasteHeaderOptions**: [`CopyPasteHeaderOptions`](../enums/GC.Spread.Sheets.CopyPasteHeaderOptions.md)

复制或粘贴数据时包含哪些标题。默认值为 GC.Spread.Sheets.CopyPasteHeaderOptions.allHeaders.

___

### <a id="customlist" name="customlist"></a> customList

• `Optional` **customList**: `string`[][]

用户自定义拖动填充的列表，优先匹配每个填充的列表。每个数组项是字符串数组。

___

### <a id="cutcopyindicatorbordercolor" name="cutcopyindicatorbordercolor"></a> cutCopyIndicatorBorderColor

• **cutCopyIndicatorBorderColor**: `string`

复制或剪切选定项时显示的指示器的边框颜色。默认值为 "#217346".

___

### <a id="cutcopyindicatorvisible" name="cutcopyindicatorvisible"></a> cutCopyIndicatorVisible

• **cutCopyIndicatorVisible**: `boolean`

是否显示复制或剪切选定项时的指示器。默认值为 true.

___

### <a id="defaultdragfilltype" name="defaultdragfilltype"></a> defaultDragFillType

• **defaultDragFillType**: [`AutoFillType`](../enums/GC.Spread.Sheets.Fill.AutoFillType.md)

默认填充类型。默认值为 GC.Spread.Sheets.Fill.AutoFillType.auto.

___

### <a id="defaultsheettabstyles" name="defaultsheettabstyles"></a> defaultSheetTabStyles

• **defaultSheetTabStyles**: [`SheetTabStyles`](../modules/GC.Spread.Sheets.md#sheettabstyles)

工作表标签的所有默认状态样式。

___

### <a id="dynamicreferences" name="dynamicreferences"></a> dynamicReferences

• **dynamicReferences**: `boolean`

是否计算具有动态引用的函数。默认值为 true.

___

### <a id="enableaccessibility" name="enableaccessibility"></a> enableAccessibility

• **enableAccessibility**: `boolean`

是否启用工作表中的辅助功能支持。默认值为 false.

___

### <a id="enableformulatextbox" name="enableformulatextbox"></a> enableFormulaTextbox

• **enableFormulaTextbox**: `boolean`

是否启用工作表中的公式文本框。默认值为 true.

___

### <a id="formulaformathint" name="formulaformathint"></a> formulaFormatHint

• **formulaFormatHint**: `boolean`

是否自动生成公式输入时的格式。默认值为 true.

___

### <a id="grayareabackcolor" name="grayareabackcolor"></a> grayAreaBackColor

• **grayAreaBackColor**: `string`

用于表示灰色区域背景颜色的颜色字符串，例如 "red"、"#FFFF00"、"rgb(255,0,0)"、"Accent 5" 等。默认值为 null.

___

### <a id="hideselection" name="hideselection"></a> hideSelection

• **hideSelection**: `boolean`

当 Spread 组件没有焦点时是否显示选定项高亮。默认值为 false.

___

### <a id="highlightinvaliddata" name="highlightinvaliddata"></a> highlightInvalidData

• **highlightInvalidData**: `boolean`

是否突出显示无效数据。默认值为 false.

___

### <a id="incrementalcalculation" name="incrementalcalculation"></a> incrementalCalculation

• **incrementalCalculation**: `boolean`

是否增量计算公式而不阻塞 UI。默认值为 false.

___

### <a id="iterativecalculation" name="iterativecalculation"></a> iterativeCalculation

• **iterativeCalculation**: `boolean`

是否启用迭代计算。默认值为 true.

___

### <a id="iterativecalculationmaximumchange" name="iterativecalculationmaximumchange"></a> iterativeCalculationMaximumChange

• **iterativeCalculationMaximumChange**: `number`

迭代计算时的最大变化。默认值为 0.01.

___

### <a id="iterativecalculationmaximumiterations" name="iterativecalculationmaximumiterations"></a> iterativeCalculationMaximumIterations

• **iterativeCalculationMaximumIterations**: `number`

迭代计算时的最大迭代次数。默认值为 1000.

___

### <a id="newtabvisible" name="newtabvisible"></a> newTabVisible

• **newTabVisible**: `boolean`

是否显示特殊标签以允许用户插入新工作表。默认值为 true.

___

### <a id="pasteskipinvisiblerange" name="pasteskipinvisiblerange"></a> pasteSkipInvisibleRange

• **pasteSkipInvisibleRange**: `boolean`

是否跳过隐藏范围粘贴。默认值为 false.

___

### <a id="pivotareareference" name="pivotareareference"></a> pivotAreaReference

• **pivotAreaReference**: [`PivotAreaReference`](../enums/GC.Spread.Pivot.PivotAreaReference.md)

是否自动生成选择透视表数据区域时的 getPivotData 公式或单元格引用。默认值为 GC.Spread.Pivot.PivotAreaReference.getPivotData.

___

### <a id="referencestyle" name="referencestyle"></a> referenceStyle

• **referenceStyle**: [`ReferenceStyle`](../enums/GC.Spread.Sheets.ReferenceStyle.md)

工作表中单元格公式中单元格和范围引用的样式。默认值为 GC.Spread.Sheets.ReferenceStyle.a1.

___

### <a id="resizezeroindicator" name="resizezeroindicator"></a> resizeZeroIndicator

• **resizeZeroIndicator**: [`ResizeZeroIndicator`](../enums/GC.Spread.Sheets.ResizeZeroIndicator.md)

当行或列调整大小时是否显示零大小指示器。默认值为 GC.Spread.Sheets.ResizeZeroIndicator.enhanced.

___

### <a id="rowresizemode" name="rowresizemode"></a> rowResizeMode

• **rowResizeMode**: [`ResizeMode`](../enums/GC.Spread.Sheets.ResizeMode.md)

指定如何调整行的大小。默认值为 GC.Spread.Sheets.ResizeMode.normal.

___

### <a id="scrollbypixel" name="scrollbypixel"></a> scrollByPixel

• **scrollByPixel**: `boolean`

是否启用按像素精确滚动。默认值为 false.

___

### <a id="scrollignorehidden" name="scrollignorehidden"></a> scrollIgnoreHidden

• **scrollIgnoreHidden**: `boolean`

滚动条是否忽略隐藏的行或列。默认值为 false.

___

### <a id="scrollpixel" name="scrollpixel"></a> scrollPixel

• **scrollPixel**: `number`

决定在 scrollByPixel 为 true 时，每次滚动多少像素。最终的滚动像素是滚动增量乘以 scrollPixel 的结果。例如，滚动增量为 3，scrollPixel 为 5，最终的滚动像素为 15。默认值为 5.

___

### <a id="scrollbarappearance" name="scrollbarappearance"></a> scrollbarAppearance

• `Optional` **scrollbarAppearance**: [`ScrollbarAppearance`](../enums/GC.Spread.Sheets.ScrollbarAppearance.md)

滚动条外观，包含 skin 和 mobile 两个枚举。默认值为 GC.Spread.Sheets.ScrollbarAppearance.skin.

___

### <a id="scrollbarmaxalign" name="scrollbarmaxalign"></a> scrollbarMaxAlign

• **scrollbarMaxAlign**: `boolean`

滚动条是否与活动工作表的最后一行和最后一列对齐。默认值为 false.

___

### <a id="scrollbarshowmax" name="scrollbarshowmax"></a> scrollbarShowMax

• **scrollbarShowMax**: `boolean`

是否根据工作表中的列和行总数显示滚动条。默认值为 true.

___

### <a id="showdragdroptip" name="showdragdroptip"></a> showDragDropTip

• **showDragDropTip**: `boolean`

是否显示拖放提示。默认值为 true.

___

### <a id="showdragfillsmarttag" name="showdragfillsmarttag"></a> showDragFillSmartTag

• **showDragFillSmartTag**: `boolean`

是否显示拖动填充对话框。默认值为 true.

___

### <a id="showdragfilltip" name="showdragfilltip"></a> showDragFillTip

• **showDragFillTip**: `boolean`

是否显示拖动填充提示。默认值为 true.

___

### <a id="showhorizontalscrollbar" name="showhorizontalscrollbar"></a> showHorizontalScrollbar

• **showHorizontalScrollbar**: `boolean`

是否显示水平滚动条。默认值为 true.

___

### <a id="showresizetip" name="showresizetip"></a> showResizeTip

• **showResizeTip**: [`ShowResizeTip`](../enums/GC.Spread.Sheets.ShowResizeTip.md)

如何显示调整大小提示。默认值为 GC.Spread.Sheets.ShowResizeTip.none.

___

### <a id="showscrolltip" name="showscrolltip"></a> showScrollTip

• **showScrollTip**: [`ShowScrollTip`](../enums/GC.Spread.Sheets.ShowScrollTip.md)

如何显示滚动提示。默认值为 GC.Spread.Sheets.ShowScrollTip.none.

___

### <a id="showverticalscrollbar" name="showverticalscrollbar"></a> showVerticalScrollbar

• **showVerticalScrollbar**: `boolean`

是否显示垂直滚动条。默认值为 true.

___

### <a id="tabeditable" name="tabeditable"></a> tabEditable

• **tabEditable**: `boolean`

是否允许用户编辑工作表标签栏。默认值为 true.

___

### <a id="tabnavigationvisible" name="tabnavigationvisible"></a> tabNavigationVisible

• **tabNavigationVisible**: `boolean`

是否显示工作表标签导航。默认值为 true.

___

### <a id="tabstripposition" name="tabstripposition"></a> tabStripPosition

• **tabStripPosition**: [`TabStripPosition`](../enums/GC.Spread.Sheets.TabStripPosition.md)

工作表标签栏的位置。默认值为 GC.Spread.Sheets.TabStripPosition.bottom.

___

### <a id="tabstripratio" name="tabstripratio"></a> tabStripRatio

• **tabStripRatio**: `number`

工作表标签栏的宽度，以水平滚动条宽度的百分比表示。默认值为 0.5.

___

### <a id="tabstripvisible" name="tabstripvisible"></a> tabStripVisible

• **tabStripVisible**: `boolean`

是否显示工作表标签栏。默认值为 true.

___

### <a id="tabstripwidth" name="tabstripwidth"></a> tabStripWidth

• **tabStripWidth**: `number`

当工作表标签栏位于左侧或右侧位置时，工作表标签栏的宽度。The default value and minimum is 80.

___

### <a id="usetouchlayout" name="usetouchlayout"></a> useTouchLayout

• **useTouchLayout**: `boolean`

是否使用触摸布局呈现 Spread 组件。默认值为 false.
